added styles to delete buttons

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,7 +27,7 @@
             <td><%= urls[url] %></td>
             <td>
               <form action="/urls/<%= url %>/delete" method="post">
-                <button type="submit">Delete</button>
+                <button class="btn btn-outline-danger" type="submit">Delete</button>
               </form>
             </td>
           </tr>
