--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,11 +8,20 @@
 
 <body>
   <%- include('./partials/_header'); %>
-  <form action="/register" method="post">
-    <input class="form-control" name="email" type="email">
-    <input class="form-control" name="password" type="password">
-  <button type="submit">Submit</button>
-  </form>
+  <div class="container mt-3">
+    <h1>Register</h1>
+    <form action="/register" method="post">
+      <div class="form-group">
+        <label>Email</label>
+        <input class="form-control" name="email" type="email">
+      </div>
+      <div class="form-group">
+        <label>Password</label>
+        <input class="form-control" name="password" type="password">
+      </div>
+    <button class="btn btn-primary" type="submit">Submit</button>
+    </form>
+  </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
