--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,14 +10,14 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if (!username) { %>
+    <% if (!user) { %>
     <form class="form-inline" action="/login" method="post">
       <input class="form-control mr-sm-2" type="text" name="username">
       <button class="btn btn-outline-dark " type="submit">Login</button>
     </form>
     <% } else { %>
       <form action="/logout" method="post">
-        <span class="mr-sm-2">Logged in as <%= username %>! </span>
+        <span class="mr-sm-2">Logged in as <%= user.email %>! </span>
         <button class="btn btn-outline-dark " type="submit">Logout</button>
       </form>
     <% } %>
