--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,13 +11,9 @@
       </div>
     </div>
     <% if (!user) { %>
-    <form class="form-inline" action="/login" method="post">
-      <input class="form-control mr-sm-2" type="text" name="username">
-      <button class="btn btn-outline-dark " type="submit">Login</button>
-    </form>
+      <button class="btn btn-outline-dark "><a href="/login">Login</a></button>
     <% } else { %>
       <form action="/logout" method="post">
-        <span class="mr-sm-2">Logged in as <%= user.email %>! </span>
         <button class="btn btn-outline-dark " type="submit">Logout</button>
       </form>
     <% } %>
