added button that links to /register in the header

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,6 +10,7 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <a class="btn btn-primary mr-2" href="/register">Register</a>
     <% if (!user) { %>
       <button class="btn btn-outline-dark "><a href="/login">Login</a></button>
     <% } else { %>
