--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,11 +13,11 @@
     <form action="/register" method="post">
       <div class="form-group">
         <label>Email</label>
-        <input class="form-control" name="email" type="email">
+        <input class="form-control" name="email" type="email" placeholder="Enter email">
       </div>
       <div class="form-group">
         <label>Password</label>
-        <input class="form-control" name="password" type="password">
+        <input class="form-control" name="password" type="password" placeholder="Password">
       </div>
     <button class="btn btn-primary" type="submit">Submit</button>
     </form>
