--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -23,20 +23,22 @@
       </thead>
       <tbody>
         <% for(let url in urls) { %>
-          <tr>
-            <td><%= url %></td>
-            <td><%= urls[url] %></td>
-            <td>
-              <form action="/urls/<%= url %>" method="get">
-                <button class="btn btn-outline-primary" type="submit">Edit</button>
-              </form>
-            </td>
-            <td>
-              <form action="/urls/<%= url %>/delete" method="post">
-                <button class="btn btn-outline-danger" type="submit">Delete</button>
-              </form>
-            </td>
-          </tr>
+          <% if(urls[url].userID === user.id) { %>
+            <tr>
+              <td><%= url %></td>
+              <td><%= urls[url].longURL %></td>
+              <td>
+                <form action="/urls/<%= url %>" method="get">
+                  <button class="btn btn-outline-primary" type="submit">Edit</button>
+                </form>
+              </td>
+              <td>
+                <form action="/urls/<%= url %>/delete" method="post">
+                  <button class="btn btn-outline-danger" type="submit">Delete</button>
+                </form>
+              </td>
+            </tr>
+          <% } %>
         <% } %>
       </tbody>
     </table>
