--- a/views/error.ejs
+++ b/views/error.ejs
@@ -7,9 +7,10 @@
 </head>
 
 <body>
-  <%- //include('./partials/_header'); %>
+  <%- include('./partials/_header'); %>
   <div class="container mt-3">
-    <h1>Error: {Error Code} Something went wrong! {Error message} </h1>
+    <p>Error: <%= responseCode %> Something went wrong!</p>
+    <p><%= message %></p> 
   </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
